# Vaultea

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SPECIFICATION.md  TODO.md  clang-uml.yml
diagrams/: vaultea_class_diagram.puml
src/: resources.qrc
src/app/: main.cpp
src/core/: VaultEngine.cpp  VaultEngine.h  VaultLoader.cpp  VaultLoader.h  VaultRepository.cpp  VaultRepository.h
src/crypto/: Constants.h  CryptoService.cpp  CryptoService.h
src/index/: BTreeIndex.cpp  BTreeIndex.h  Config.h  IIndex.h
src/managers/: Constants.h  DataManager.cpp  DataManager.h  IndexManager.cpp  IndexManager.h  Manager.cpp  Manager.h  SlottedManager.cpp  SlottedManager.h
src/models/: BaseVaultObject.h  EncryptedBlob.h  EntryTypes.h  Folder.h  IndexEntry.h  ProcessedBlob.h  RecordRef.h  VaultEntry.h
src/pipeline/: Codec.h  Compression.cpp  Compression.h  DefaultCodec.cpp  DefaultCodec.h  ICompressor.h  LZ4Compressor.cpp  LZ4Compressor.h  Serialization.cpp  Serialization.h  ZstdCompressor.cpp  ZstdCompressor.h
src/storage/: BTreeIndex.cpp  BTreeIndex.h  Constants.h  Page.h  PageLayout.h  PageManager.cpp  PageManager.h  Pager.cpp  Pager.h  StorageEngine.cpp  StorageEngine.h  Time.h  UUID.cpp  UUID.h  VaultHeader.h  VaultLayout.h  VaultPreamble.h  VaultTypes.h
src/storage/page/: Constants.h  Page.h  PageAllocator.cpp  PageAllocator.h  PageFactory.cpp  PageFactory.h  PageLayout.h  PageLoader.cpp  PageLoader.h  PageManager.cpp  PageManager.h  Pager.cpp  Pager.h  SlottedPageHandler.cpp  SlottedPageHandler.h
src/ui/: main.cpp  mainwindow.h
src/ui/controllers/: vaultcontroller.cpp  vaultcontroller.h
src/ui/pages/createvault/: createvaultpage.cpp  createvaultpage.h
src/ui/pages/entryeditor/: entryeditorpage.cpp  entryeditorpage.h  entryeditorpage.ui
src/ui/pages/folderview/: editfolderdialog.cpp  editfolderdialog.h  editfolderdialog.ui  folderviewpage.cpp  folderviewpage.h  folderviewpage.ui
src/ui/pages/openvault/: openvaultpage.cpp  openvaultpage.h
src/ui/pages/vault/: vaultpage.cpp  vaultpage.h  vaultpage.ui
src/ui/pages/welcome/: welcomepage.cpp  welcomepage.h  welcomepage.ui
src/ui/theme/: thememanager.cpp  thememanager.h
src/ui/widgets/: passwordlineedit.cpp  passwordlineedit.h
src/ui/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/util/: Helpers.h
